website-stack/lucinda-art-gallery/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lucinda-art-gallery-service
  namespace: website-stack
spec:
  selector:
    app: lucinda-art-gallery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
