website-stack/lucinda-art-gallery/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucinda-art-gallery-ingress
  namespace: website-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lucinda-art-gallery.rancher-dev.branconet.lan # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lucinda-art-gallery-service
                port:
                  number: 80
